# OOP_PR4_Spell

./: CMakeLists.txt  README.md  main.cpp
includes/: Instant.h  Sorcery.h  Spell.h  Wizard.h
src/: Instant.cpp  Sorcery.cpp  Spell.cpp  Wizard.cpp
